# paramify-fetchers

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  DISCOVERY.md  MANIFEST.in  README.md  manifest.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
deploy/: .env.example  LOCAL_TESTING.md  README.md  crontab  docker-compose.yml  entrypoint.sh
deploy/k8s/: AWS_MULTI_ACCOUNT.md  LOCAL_K8S.md  cronjob-aws.yaml  cronjob.yaml
docs/: authoring_a_fetcher.md  design.md  distribution_design.md  envelope_design.md  fetcher_contract.md  handoff.md  porting_playbook.md  releasing.md  uploader_design.md  validators_design.md  versioning.md
docs/deferred/: workspace_sync_design.md
docs/onboarding/: README.md
examples/: aws_ambient.yaml  aws_guard_duty_findings_intake.yaml  demo.yaml
fetchers/_categories/: datadog.yaml  demo.yaml  k8s.yaml  paramify.yaml
fetchers/_template/: fetcher.yaml
fetchers/aws/: README.md
fetchers/checkov/: README.md
fetchers/datadog/: README.md
fetchers/gitlab/: README.md
fetchers/k8s/: README.md
fetchers/knowbe4/: README.md
fetchers/okta/: README.md
fetchers/paramify/: README.md
fetchers/rippling/: README.md
fetchers/sentinelone/: README.md
framework/: api.py  cli.py  config_loader.py  contract.py  envelope.py  roots.py  validators.py
framework/reference/: ksis.yaml
framework/runner/: executor.py  manifest_loader.py
framework/schemas/: envelope_schema.json  fetcher_schema.json  validator_schema.json
framework/tui/: app.py  modals.py  palette.py  render.py  welcome_demo.py
framework/verify/: __init__.py
packaging/brew/: README.md
tests/: test_cli.py  test_contracts.py  test_executor.py  test_installed.py  test_roots.py  test_scripts_uploader.py  test_uploader.py  test_user_content.py  test_validator_api.py  test_validator_sync.py  test_validators_registry.py  test_verify.py
tools/: gen_ksi_coverage.py
uploaders/: __init__.py
uploaders/paramify_evidence/: README.md  __init__.py  uploader.py
uploaders/paramify_scripts/: README.md  uploader.py  uploader.yaml
uploaders/paramify_validators/: README.md  syncer.py  syncer.yaml
validators/: README.md
validators/_template/: validator.yaml
validators/attestation/: annual_pen_test_completed.yaml  authorization_letter_currency.yaml  disaster_recovery_attestation.yaml  il5_gap_remediation_tracking.yaml  incident_response_incidents_tests_after_action_reports.yaml  independent_audit_3pao_security_assessment.yaml  insurance_coverage_currency.yaml  interconnections_review_monthly_manual_attestation.yaml  rar_3pao_attestation_review.yaml  review_reported_bug_incidents_in_zendesk.yaml  service_overview_currency.yaml  significant_change_tracking.yaml
validators/aws/: alb_encryption_in_transit.yaml  all_rds_databases_encrypted.yaml  all_s3_buckets_encrypted.yaml  auto_scaling_group_multi_az.yaml  aws_backup_vault_configured.yaml  aws_config_monitoring.yaml  block_storage_encryption_status.yaml  cloudtrail_actively_logging.yaml  cloudtrail_cloudwatch_logs_integration.yaml  cloudtrail_global_service_events_enabled.yaml  cloudtrail_log_file_validation_enabled.yaml  cloudtrail_logs_kms_encrypted.yaml  cloudtrail_multi_region_coverage.yaml  cloudtrail_resources_in_govcloud.yaml  cross_account_trust_limited_to_approved_accounts.yaml  ebs_snapshots_completed_successfully.yaml  ebs_snapshots_encrypted.yaml  ebs_snapshots_exist.yaml  ebs_snapshots_kms_encrypted.yaml  efs_multi_az_mount_targets.yaml  eks_cluster_multi_az_subnets.yaml  eks_logging_and_least_privilege_configuration.yaml  iam_cross_account_external_ids_approved.yaml  iam_mfa_enforcement_policy_exists.yaml  iam_policies_no_wildcard_resources.yaml  iam_policies_not_attached_to_users.yaml  iam_users_and_groups_compliant.yaml  identity_center_saml_federation_configured.yaml  inbound_sg_allowlist_for_internet_exposed_resources.yaml  kms_key_rotation_enabled.yaml  kms_rotation_config_rule.yaml  load_balancer_encryption.yaml  load_balancer_iam_delete_permissions_tag_scoped.yaml  load_balancer_multi_az.yaml  load_balancers_using_fips_tls_1_3.yaml  minimum_assessment_scope_aws.yaml  nlb_encryption_in_transit.yaml  open_egress_limited_to_approved_security_groups.yaml  outbound_port_allowlist.yaml  rds_backup_coverage_complete.yaml  (+25 more)
validators/checkov/: compliance_threshold_met_84_terraform.yaml  compliance_threshold_met_85_kubernetes.yaml  kubernetes_iac_compliance_scan_performed.yaml  terraform_iac_compliance_scan_performed.yaml
validators/gitlab/: automated_functional_testing_executed.yaml  automated_functional_tests_executed_in_pipeline.yaml  change_management_active.yaml  ci_cd_pipeline_configuration_exists.yaml  container_image_scanning_enforces_medium_severity_threshold.yaml  container_images_built_with_kaniko_daemonless.yaml  container_images_sourced_from_private_ecr_registry.yaml  controlled_application_deployment_via_ci_cd_pipeline.yaml  controlled_deployment_through_ci_cd_pipeline.yaml  dependency_based_build_execution_npm.yaml  deployment_health_verified_via_rollout_status_check.yaml  end_to_end_tests_executed_via_playwright.yaml  image_scanner_suppression_count_within_approved_limit.yaml  image_scanner_suppressions_limited_to_approved_entries.yaml  npm_dependency_audit_executed.yaml  npm_package_signature_verification.yaml  pipeline_base_images_pinned_to_immutable_sha256_digest.yaml  pipeline_restricted_to_mrs_and_protected_branches.yaml
validators/knowbe4/: 80_completed_ir_dr_training.yaml  80_completed_security_awareness_training.yaml  80_of_developers_trained.yaml  80_of_high_risk_users_trained.yaml  all_high_risk_users_trained.yaml
validators/okta/: all_users_enrolled_in_security_key_mfa.yaml  api_tokens_owned_by_dedicated_service_accounts.yaml  conditional_access_enforced_with_group_assignment.yaml  conditional_group_based_access_configured.yaml  multiple_suspicious_activity_detections_active.yaml  no_accounts_inactive_beyond_90_days.yaml  passwordless_authenticator_configured.yaml  passwordless_sign_on_enforced_for_all_users.yaml  (+2 more)
(+163 files in other folders)
