[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paramify-fetchers"
version = "0.2.0"
description = "Paramify evidence fetcher framework — discover, build, run, and inspect evidence fetchers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

# Base runtime: everything the headless `paramify` CLI and the runner need.
# The TUI is an optional front-end — install its extra to use `paramify tui`.
dependencies = [
    "python-dotenv",
    "requests",
    "pyyaml",
    "jsonschema",
    "typer>=0.12",
    "platformdirs",
]

[project.optional-dependencies]
tui = ["textual>=1.0,<2.0"]
checkov = ["checkov"]
dev = ["pytest", "ruff", "mypy", "setuptools>=64", "wheel"]
# Convenience: every front-end + dev tooling in one install.
all = ["textual>=1.0,<2.0", "checkov", "pytest", "ruff", "mypy", "setuptools>=64", "wheel"]

# The single entry point. `paramify` steers every front-end: the headless
# commands, plus `paramify tui`. (Renaming later is a one-line change here; add
# a second line to register an alias.)
[project.scripts]
paramify = "framework.cli:app"

# Installable distribution (docs/distribution_design.md): the wheel ships the
# framework engine, its data files (schemas, KSI reference, TUI styles), the
# uploader package, and a framework/_bundled/ content snapshot (fetchers +
# examples) assembled at build time by setup.py's build_py hook. A dev checkout
# still works editable: framework.roots prefers the checkout's fetchers/ and
# treats a missing _bundled/ as "dev tree".
[tool.setuptools.packages.find]
where = ["."]
include = ["framework*", "uploaders*"]

[tool.setuptools.package-data]
framework = ["schemas/*.json", "reference/*.yaml", "tui/styles/*.tcss"]

# pytest: scope collection to the framework test suite. Per-fetcher tests/ dirs
# (e.g. the _template scaffold) are placeholders with no settled convention yet;
# without testpaths a bare `pytest` walks the whole tree and aborts at collection
# on duplicate test_fetcher.py basenames. importlib import-mode additionally makes
# duplicate basenames safe if a path outside tests/ is ever collected explicitly.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

# Lint + import order for the framework's OWN code. Ported v0.x fetchers under
# fetchers/ are held to the schema contract (tests/test_contracts.py), not lint
# rules (CLAUDE.md); CI runs `ruff check framework/` so only that tree is gated.
[tool.ruff]
target-version = "py310"
extend-exclude = ["fetchers", ".venv"]

[tool.ruff.lint]
# Default lint set (pyflakes F + the E4/E7/E9 pycodestyle slice) plus import
# sorting (I). `ruff format` is intentionally NOT gated yet (would churn ~25
# files) — adopt as a separate pass.
select = ["E4", "E7", "E9", "F", "I"]

# Static typing gate for the core framework. The TUI subclasses textual's App and
# reads attributes mypy can't see on the base class — it needs its own typing
# pass, so it's suppressed here rather than gating CI. Third-party libs ship no
# stubs, hence ignore_missing_imports.
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "framework.tui.*"
ignore_errors = true

# The uploader is held to the same bar as fetchers (working v0.x code, not the
# gated framework core); it entered mypy's import graph when api.py gained the
# packaged-module fallback. Gate it when it gets its own typing pass.
[[tool.mypy.overrides]]
module = "uploaders.*"
ignore_errors = true
